--- a/pom.xml
+++ b/pom.xml
@@ -73,7 +73,7 @@
         <myfaces.version>2.2.12</myfaces.version>
         <xbean.version>4.5</xbean.version>
         <arquillian.version>1.1.13.Final</arquillian.version>
-        <cdi.tck.version>2.0.0.Final</cdi.tck.version>
+        <cdi.tck.version>2.0.2.Final</cdi.tck.version>
         <httpclient.version>4.5.2</httpclient.version>
 
         <osgi.servlet.range>2.4</osgi.servlet.range>
@@ -550,6 +550,7 @@
         <module>samples</module>
         <module>atinject-tck</module>
         <module>webbeans-tck</module>
+        <module>webbeans-se-tck</module>
         <module>distribution</module>
         <module>webbeans-maven</module>
         <module>webbeans-gradle</module>
